--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Mariages et séminaires | France | Domaine du Haras de la Chaîne</title>
+  <meta name="google-site-verification" content="EAInzFbD4pf9a-ejmzEVsPC47gAX4pgwaiOq9Oox-G4" />
 </head>
 
 <body>
