improve title dans description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Domaine de 25 ha aux portes de la Bretagne. 2 sites sont disponibles pouvant accueillir jusqu'à 280 personnes" />
+    content="Le domaine s'étend sur 25 de prairies et de bois aux portes de la Bretagne. 2 sites sont disponibles pouvant accueillir jusqu'à 280 personnes" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Mariages et séminaires | France | Domaine du Haras de la Chaîne</title>
+  <title>Domaine du Haras de la Chaîne | Mariages et séminaires | France</title>
   <meta name="google-site-verification" content="EAInzFbD4pf9a-ejmzEVsPC47gAX4pgwaiOq9Oox-G4" />
 </head>
 
