google tag analytics

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,16 @@
   <meta name="google-site-verification" content="EAInzFbD4pf9a-ejmzEVsPC47gAX4pgwaiOq9Oox-G4" />
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RF58L9VRH3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-RF58L9VRH3');
+</script>
+
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
