--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Ce domaine s'étend sur 25 de prairies et de bois aux portes de la Bretagne. 2 sites sont disponibles pouvant accueillir jusqu'à 280 personnes" />
+    content="Idéal pour l'organisation de mariages et séminaires, ce domaine s'étend sur 25 de prairies et de bois aux portes de la Bretagne. 2 sites sont disponibles pouvant accueillir jusqu'à 280 personnes" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
